--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ dependencies = [
     "aiohttp>=3.13.2",
     "aiortc>=1.14.0",
     "opencv-python>=4.12.0.88",
+    "pyprojroot>=0.3.0",
+    "python-dotenv>=1.2.1",
     "websockets>=15.0.1",
 ]
 
