--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "aiohttp>=3.13.2",
     "aiortc>=1.14.0",
     "deepface>=0.0.96",
+    "edge-tts>=7.2.7",
     "opencv-python>=4.12.0.88",
     "pyopengl>=3.1.10",
     "pyprojroot>=0.3.0",
